--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- PWA -->
-    <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1e90ff">
 
     <!-- iOS -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/project-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="project-icon.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="RouteVision">
@@ -58,6 +57,6 @@
             </button>
         </div>     
     </div>
+<script src="app.js?v=4.2.0"></script>
 </body>
-</html>
 </html>
