added id's to bottom-nav-btns

--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
         </div>
 
         <div class="pill-nav">
-            <button class="nav-btn">
+            <button id="menu-btn" class="nav-btn">
                 <i class="fa-solid fa-bars"></i>
             </button>
-            <button class="nav-btn">
+            <button id="compass-btn" class="nav-btn">
                 <i class="fa-regular fa-compass"></i>
             </button>
-            <button class="nav-btn">
-                <i class="fa-solid fa-chart-gantt"></i>
+            <button id="stats-btn" class="nav-btn">
+                <i class="fa-solid fa-chart-line"></i>
             </button>
-            <button class="nav-btn">
+            <button id="profile-btn" class="nav-btn">
                 <i class="fa-regular fa-address-card"></i>
             </button>
         </div>     
