added email to profile card

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     </div>
 
     <!-- Statistics Page View -->
+    <!-- Test Data ATM -->
     <div id="statistics-page" class="page hidden">
         <div id="debug-header">
             <div>Speed: <span id="dbg-speed">0</span> km/h</div>
@@ -84,6 +85,8 @@
             <div id="profile-info">
                 <header>Developer of RouteVision</header>
                 <header>User since: 2025</header>
+                <header>‎</header>
+                <header>archie.moon04@gmail.com</header>
             </div>
             <div id="socials-container">
                 <div id="social-buttons">
