began logic for rendering trips in trips page and changed speed output for testing to mph

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
     <!-- Test Data ATM -->
     <div id="statistics-page" class="page hidden">
         <div id="debug-header">
-            <div>Speed: <span id="dbg-speed">0</span> km/h</div>
+            <div>Speed: <span id="dbg-speed">0</span> mph</div>
             <div>Distance: <span id="dbg-distance">0</span> km</div>
             <div>Fuel: <span id="dbg-fuel">0</span> L</div>
-            <div>Avg Speed: <span id="dbg-avg-speed">0</span> km/h</div>
+            <div>Avg Speed: <span id="dbg-avg-speed">0</span> mph</div>
         </div>
     </div>
 
