Updated avg speed to work on total dist / time and added mpg to test display

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <div>Distance: <span id="dbg-distance">0</span> km</div>
             <div>Fuel: <span id="dbg-fuel">0</span> L</div>
             <div>Avg Speed: <span id="dbg-avg-speed">0</span> mph</div>
+            <div>Efficiency: <span id="dbg-mpg">0</span> mpg</div>
         </div>
     </div>
 
