added profile stats figures, need to do css

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <div id="profile-info">
                 <header>Developer of RouteVision</header>
-                <header>User since: 2025</header>
+                <header>BSc CompSci @ Uni of Surrey</header>
                 <header>‎</header>
                 <header>archie.moon04@gmail.com</header>
             </div>
@@ -102,7 +102,20 @@
                     </a>
                 </div>
             </div>
-            <div id="profile-content"></div>
+            <div id="profile-content">
+                <div id="profile-content-drives" class="profile-content-layout">
+                    <div id="total-drives">323</div>
+                    <div id="total-drives">Drives</div>
+                </div>
+                <div id="profile-content-miles" class="profile-content-layout">
+                    <div id="total-miles" class="">12,349</div>
+                    <div id="total-miles">Miles</div>
+                </div>
+                <div id="profile-content-hours" class="profile-content-layout">
+                    <div id="total-hours">64.3</div>
+                    <div id="total-hours">Hours</div>
+                </div>
+            </div>
         </div>
     </div>
 
