pause feature now stops tracking and time, gps is also independant of time now

--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
             </div>
             <div id="profile-content">
                 <div id="profile-content-drives" class="profile-content-layout">
-                    <div id="total-drives" class="profile-figure">323</div>
+                    <div id="total-drives" class="profile-figure">0</div>
                     <div id="total-drives-header" class="profile-header">Drives</div>
                 </div>
                 <div id="profile-content-miles" class="profile-content-layout">
-                    <div id="total-miles" class="profile-figure">12,349</div>
+                    <div id="total-miles" class="profile-figure">0</div>
                     <div id="total-miles-header" class="profile-header">Miles</div>
                 </div>
                 <div id="profile-content-hours" class="profile-content-layout">
-                    <div id="total-hours" class="profile-figure">64.3</div>
+                    <div id="total-hours" class="profile-figure">0.0</div>
                     <div id="total-hours-header" class="profile-header">Hours</div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
     <!-- Bottom Nav Bar -->
     <div id="bottom-nav-bar">
         <div class="pill-nav">
-            <button id="home-btn" class="nav-btn">
+            <button id="home-btn" class="nav-btn active">
                 <i class="fa-solid fa-house"></i>
             </button>
             <button id="compass-btn" class="nav-btn">
