added live fuel price from tesco within 10km from current position, updated once daily, rice cached for 24h.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
 
     <!-- Home page View -->
     <div id="home-page" class="page active">
-            <div id="car-photo"></div>
+            <div id="car-photo">
+                <div id="fuel-price-box">
+                    <div id="fuel-icon"></div>
+                    <div id="fuel-price">134.6</div>
+                </div>
+            </div>
 
             <div id="recent-trips-overview" class="main-content-panel">
                 <header id="recent-trips-overview-header" class="panel-header">Recent Trips:</header>
