Moved CSS and images into seperate files to improve readability.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
 
     <title>RouteVision</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/trips.css">
+    <link rel="stylesheet" href="css/stats.css">
+    <link rel="stylesheet" href="css/profile.css">
+    <link rel="stylesheet" href="css/driving.css">
 
     <!-- PWA -->
     <meta name="theme-color" content="#1e90ff">
 
     <!-- iOS -->
-    <link rel="apple-touch-icon" sizes="180x180" href="project-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/project-icon.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="RouteVision">
@@ -49,7 +55,7 @@
             <div id="car-photo">
                 <div id="fuel-price-box">
                     <div id="fuel-icon"></div>
-                    <div id="fuel-price"></div>
+                    <div id="fuel-price">000.0</div>
                 </div>
             </div>
 
