reverted back to slight trips formatting changes and begun boilerplate for stats page

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
     <!-- Statistics Page View -->
     <div id="statistics-page" class="page hidden">
+        <div id="stats-page-content"></div>
     </div>
 
     <!-- Profile Page View -->
